--- a/contactus.html
+++ b/contactus.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-about.css">
     <link rel="stylesheet" href="css/contactus.css">
 </head>
 
@@ -72,12 +71,14 @@
                     <input type="text" id="txt4" value="Message"><br><br>
                     <br>
                     <button class="btn btn-primary">SEND</button>
-                    <br>
-                    <br>
-                    <br><br><br><br>
                 </div>
 
-                <div class="col-sm-7"> <img id="img-loca" src="img/loca.png" alt="menuisier"></div>
+                <div class="col-sm-7" id="mapcontainer">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3398.4342319517336!2d-8.02402147835465!3d31.594559266498507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdafefdfd3a920c9%3A0xa717397d46902b3b!2sPharmacie%20Bouaakaz!5e0!3m2!1sfr!2sma!4v1711292543090!5m2!1sfr!2sma"
+                        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
 
         </div>
